samples/_failures_safe/1761515298_729e38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da9afd1e.c: In function ‘main’:
./samples/SAFE/__tmp_da9afd1e.c:150:5: error: expected declaration or statement at end of input
  150 |     add_edge(&g, 4, 5, 3);
      |     ^~~~~~~~
